issue with last cell's height is fixed now, I added a darker color for texts so it's more readable

--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,8 @@ button #add-currency-btn {
 .btn-icon:hover .tooltiptext {
   visibility: visible;
 }
+
+/* Fix last cell height issue */
+#currencies-list-div .box:last-child { 
+  margin-bottom: 1.5rem; 
+}
